--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "Vighnesh Manjrekar",
   "license": "ISC",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
