--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Vighnesh Manjrekar",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
@@ -27,10 +28,11 @@
     "morgan": "^1.10.0",
     "node-geocoder": "^4.0.0",
     "nodemailer": "^6.7.5",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "slugify": "^1.6.5",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "nodemon": "^1.3.3"
+    "nodemon": "^2.0.18"
   }
 }
